@@ -22,8 +22,9 @@ static gchar* aplfx="⎕fx 'z←i ___ p;m'"
   " 'D: _←⎕nl 2 3 4 5 6'"
   " '→0'"
   " 'F: →(0=⍴_)/E'"
-  " 'm←((⎕io=,1↑[⎕io+1]p⍷_)⌿_)⍪'' '''"
-  " 'z←((↑⍴m)|i+1) (('' ''≠z)/z←m[((⎕io-1)+↑⍴m)⌊⎕io⌈⎕io+i;])'"
+  " 'm←((,1↑[⎕io+1]p⍷_)⌿_)⍪'' '''"
+  " 'z←(('' ''≠z)/z←m[((⎕io-1)+↑⍴m)⌊⎕io⌈⎕io+i;])'"
+  " 'z←((⎕io+1+×i-¯1+↑⍴m)⌷(i+1),2⍴0) z'"
   " '→0'"
   " 'E: z←'''''";
 
